[gd_scene load_steps=7 format=2]

[ext_resource path="res://irs/debt/Debt.gd" type="Script" id=1]
[ext_resource path="res://school/Lessons/LessonFont.otf" type="DynamicFontData" id=2]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.901961, 0.901961, 0.901961, 1 )
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color( 0.235294, 0.235294, 0.235294, 1 )
border_blend = true
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="DynamicFont" id=2]
size = 50
use_mipmaps = true
use_filter = true
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.117647, 0.427451, 0.129412, 1 )
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color( 0.0823529, 0.294118, 0.0901961, 1 )
border_blend = true
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="DynamicFont" id=4]
size = 50
use_mipmaps = true
use_filter = true
font_data = ExtResource( 2 )

[node name="Debt" type="Button"]
margin_left = 5.0
margin_right = 571.0
margin_bottom = 120.0
size_flags_horizontal = 0
size_flags_vertical = 8
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 1 )
custom_styles/normal = SubResource( 1 )
shortcut_in_tooltip = false
script = ExtResource( 1 )

[node name="SourceName" type="Label" parent="."]
margin_left = 5.0
margin_top = 5.0
margin_right = 149.0
margin_bottom = 59.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "NOMES"

[node name="Strikes" type="Control" parent="."]
margin_left = 270.0
margin_top = 5.0
margin_right = 310.0
margin_bottom = 45.0

[node name="Value" type="Label" parent="."]
margin_left = 5.0
margin_top = 55.0
margin_right = 160.0
margin_bottom = 109.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0.784314, 0, 0, 1 )
text = "G$12345"

[node name="Pay" type="Button" parent="."]
margin_left = 415.0
margin_top = 5.0
margin_right = 561.0
margin_bottom = 115.0
custom_styles/hover = SubResource( 3 )
custom_styles/pressed = SubResource( 3 )
custom_styles/normal = SubResource( 3 )
custom_fonts/font = SubResource( 4 )
text = "PAGAR"

[node name="BuyDate" type="Label" parent="."]
visible = false
margin_right = 40.0
margin_bottom = 14.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "11/11"

[node name="SellDate" type="Label" parent="."]
visible = false
margin_right = 40.0
margin_bottom = 14.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "11/11"

[node name="AmmountSold" type="Label" parent="."]
visible = false
margin_right = 40.0
margin_bottom = 14.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "G$12345"

[node name="Profit" type="Label" parent="."]
visible = false
margin_right = 40.0
margin_bottom = 14.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0.117647, 0.584314, 0, 1 )
text = "G$12345"

[node name="Taxes" type="Label" parent="."]
visible = false
margin_right = 40.0
margin_bottom = 14.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0.784314, 0, 0, 1 )

[connection signal="pressed" from="Pay" to="." method="_on_Pay_pressed"]
